--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -11,9 +11,14 @@ footer{
     justify-content: center;
     align-items: center;
 
-
     color: $gold-color;
     background-color: $background-dark;
     border-top: 2px solid $gold-color ;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+
+    &>svg{
+        height: 0.6rem;
+        margin-left: -1.3rem;
+    }
+
 }
