--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -7,7 +7,7 @@ $font-color:$gold-color;
 //SIZES
 $img-size: clamp(300px, 65vw, 600px);
 $text-container-size: clamp(300px, 40vw, 600px);
-$font-size: clamp(1rem, 2vw, 1.5rem);
+$font-size: clamp(0.9rem, 1.6vw, 1.2rem);
 
 #about-container{
     flex-grow: 1;
@@ -20,6 +20,8 @@ $font-size: clamp(1rem, 2vw, 1.5rem);
     justify-content: center;
     align-items: center;
     grid-row-gap: 2rem;
+
+    line-height: 1.6;
 }
 
 .section{
@@ -46,7 +48,7 @@ $font-size: clamp(1rem, 2vw, 1.5rem);
     //all the same img for now...
     /* background-image: url('../assets/fish.jpg'); */
     
-    border: 2px solid $blue-color;
+    //border: 2px solid $blue-color;
     border-radius: 10px;
     
 }
@@ -54,7 +56,7 @@ $font-size: clamp(1rem, 2vw, 1.5rem);
 .text-container{
     /* aspect-ratio: 4/3; */
     width: $text-container-size;
-    padding: 1rem 1rem;
+    padding: 1rem min(5rem, 5vw);
     
     font-size: $font-size;
     text-align: center;
