--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -20,7 +20,7 @@ $line-cross-width: calc($menu-button-height * 1.414);
 
 //ANIMATE TIMES
 $lines-animate-time: 0.5s;
-$dropbox-animate-time: 0.2s;
+$dropbox-animate-time: 0.33s;
 
 header{
     position: fixed;
@@ -97,7 +97,10 @@ a:active{
 #dropdown-box{
     position: absolute;
     top: 0;
-    z-index: -5;
+    //z-index: -5;
+    //transform: translateY(-90px);
+
+    transition: all $dropbox-animate-time;
 }
 
 #dropdown-box.active{
@@ -107,23 +110,15 @@ a:active{
     align-items: center;
     text-align: center;
     
-    position: absolute;
     z-index: 1;
     min-width: 100vw;
-    top: 90px;
+    min-height: 100vh;
     
-    padding: 0.5rem 0;
-    gap: 0.9rem;
+    padding: min(30vh, 250px) 0;
+    gap: calc(2.5rem + 0.33vh);
 
-    background-color: $background-dark;
-    border: 1px solid $gold-color;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-
-    transition: background-color $dropbox-animate-time,
-                top $dropbox-animate-time,
-                z-index $dropbox-animate-time;
+    background: #2a2a2ab4;
+    backdrop-filter: blur(10px);
 
     a{
         color: $gold-color;
@@ -136,8 +131,30 @@ a:active{
 
 
 @media only screen and (max-width: 650px){
+    
+   #dropdown-box.active
+    > #home-tab
+    > #home-heading{
+            /* font-family: 'Rozha One', serif; */
+            color: $gold-color;
+            text-transform: uppercase;
+            font-size: $dropdown-link-size;
+            text-shadow: none;
+            letter-spacing: 0;
+            font-weight: 400;
+
+    }
+    
     #right-side{
         display: none;    
+    }
+
+    #dropdown-box.active
+    a.active{
+        text-decoration: underline;
+        text-decoration-color: $blue-color;
+        text-decoration-thickness: 3px;
+        
     }
 
     #menu-button{
@@ -150,6 +167,8 @@ a:active{
         height: max-content; 
         background-color: $background-dark;
         border: none;
+
+        z-index: 999;
 
         cursor: pointer;
 
