--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -13,7 +13,7 @@ $font-size: clamp(0.9rem, 1.6vw, 1.2rem);
     flex-grow: 1;
     align-self: center;
     padding: 0 0;
-    margin-top: 2.5vh;
+    margin-block: 2.5vh;
     
     display: grid;
     grid-template-columns: auto;
