--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -35,7 +35,7 @@ $hours-times-size: clamp(0.9rem, 1.2vw, 1rem);
     place-items: center;
     gap: 1rem;
 
-    margin-top: 1rem;
+    margin-block: 1rem;
     
 
     >div{
