--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -1,44 +1,61 @@
-$container-width: 100%;
-$container-height: calc(var($container-width) * 0.56);
+@import "./colors.scss";
 
 .slider-container {
   position: relative;
-  /* width: $container-width;
-  height: $container-height; */
-  background: slategray;
+  min-height: 500px !important;
 
   .slide {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-
-    width: 95%;
-    height: 95%;
-    background: darkslategray;
+    width: 100%;
+    height: 100%;
 
     position: absolute;
-    top: 2.5%;
-    left: 2.5%;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+  }
 
-    img {
-      display: none;
-      overflow: hidden;
-    }
-    .active-img {
-      display: block;
-    }
+  .slide.active-slide {
+    display: flex;
+  }
+
+  .slide > div {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 20px;
+
+    color: rgb(226, 219, 219);
+    background-color: #2c2a2a90;
+
+    max-width: 80%;
+    min-height: 30%;
+    border-radius: 20px;
+    padding-block: 20px;
+
+    font-size: calc(24px + 0.5vw);
+    text-align: center;
   }
 
   & > button {
     position: absolute;
-    top: 70%;
+    top: 90%;
 
-    width: 100px;
+    width: 60px;
     height: 50px;
 
-    opacity: 50%;
+    background-color: transparent;
+    border: none;
+    opacity: 60%;
 
     cursor: pointer;
+
+    i {
+      font-family: "Font Awesome 6 Free";
+      color: #fff;
+      font-size: calc(24px + 1vw);
+    }
   }
 
   .prev-btn {
@@ -83,4 +100,42 @@ $container-height: calc(var($container-width) * 0.56);
   #dot3 {
     left: 57.5%;
   }
+}
+
+// set slide backgrounds
+
+#slide0 {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../assets/FH_front.png");
+}
+
+#slide1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../assets/FH_pies.jpg");
+}
+
+#slide2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../assets/FH_sausages.png");
+}
+
+#slide3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../assets/FH_potatoes.png");
+}
+
+#slide0,
+#slide1,
+#slide2,
+#slide3 {
+  background-size: cover;
+  background-position: center;
+}
+
+// utility classes
+
+.flex-centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
