--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -29,13 +29,22 @@
     color: rgb(226, 219, 219);
     background-color: #2c2a2a90;
 
-    max-width: 80%;
-    min-height: 30%;
+    max-width: min(80%, 500px);
+    min-height: 50%;
     border-radius: 20px;
-    padding-block: 20px;
+    padding: 20px;
 
-    font-size: calc(24px + 0.5vw);
+    font-size: calc(24px + 0.33vw);
     text-align: center;
+
+    i {
+      font-size: calc(24px + 0.8vw);
+    }
+
+    span {
+      color: $blue-color;
+      font-size: calc(24px + 0.6vw);
+    }
   }
 
   & > button {
