--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -5,20 +5,24 @@
   min-height: 500px !important;
 
   .slide {
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
 
+    opacity: 0;
+
     position: absolute;
     top: 0;
     left: 0;
     border-radius: 10px;
+    transition: all 0.3s;
+    transition-delay: 0.2s;
   }
 
   .slide.active-slide {
-    display: flex;
+    opacity: 100;
   }
 
   .slide > div {
