add more padding around text

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -54,7 +54,7 @@ $hours-times-size: calc(14px + 0.390625vw);
   align-items: center;
   text-align: center;
 
-  padding-inline: 0.8rem;
+  padding-inline: 2rem;
 
   background: $welcome-bg-img;
 
@@ -83,7 +83,7 @@ $hours-times-size: calc(14px + 0.390625vw);
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
 
   background-color: $hours-background-color;
   /* border-top: 1px solid $gold-color; */
