--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -119,22 +119,22 @@
 
 #slide0 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/FH_front.png");
+    url("../assets/fried-fish.png");
 }
 
 #slide1 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/FH_pies.jpg");
+    url("../assets/FH_potatoes.png");
 }
 
 #slide2 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/FH_sausages.png");
+    url("../assets/fish-in-oil.png");
 }
 
 #slide3 {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../assets/FH_potatoes.png");
+    url("../assets/fish-and-chips.jpg");
 }
 
 #slide0,
