--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -33,34 +33,34 @@
     color: rgb(226, 219, 219);
     background-color: #2c2a2a90;
 
-    max-width: min(80%, 500px);
+    max-width: min(80%, 400px);
     min-height: 50%;
     border-radius: 20px;
     padding: 20px;
 
-    font-size: calc(24px + 0.33vw);
+    font-size: calc(18px + 0.33vw);
     text-align: center;
 
     i {
-      font-size: calc(24px + 0.8vw);
+      font-size: calc(22px + 0.8vw);
     }
 
     span {
       color: $blue-color;
-      font-size: calc(24px + 0.6vw);
+      font-size: calc(20px + 0.6vw);
     }
   }
 
-  & > button {
+  button {
     position: absolute;
-    top: 90%;
+    top: 85%;
 
     width: 60px;
     height: 50px;
 
     background-color: transparent;
     border: none;
-    opacity: 60%;
+    opacity: 80%;
 
     cursor: pointer;
 
@@ -69,6 +69,15 @@
       color: #fff;
       font-size: calc(24px + 1vw);
     }
+  }
+
+  button:hover,
+  button:focus {
+    opacity: 100;
+  }
+
+  button:active {
+    transform: scale(1.08);
   }
 
   .prev-btn {
