--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -40,6 +40,7 @@ header {
   color: $gold-color;
   background-color: $background-dark;
   border-bottom: 1px solid $gold-color;
+  border-radius: 0 0 10px 10px;
 }
 
 a {
