--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,4 +1,4 @@
-@import './colors.scss';
+@import "./colors.scss";
 
 //COLORS
 $section-bg-color: $background-dark;
@@ -12,146 +12,139 @@ $standard: clamp(0.8rem, 16px, 1rem);
 $highlight: clamp(0.9rem, 19px, 1.2rem);
 $social-heading: clamp(1rem, 22px, 1.2rem);
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    line-height: 1.5;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  line-height: 1.5;
 }
 
-#contact-container{
-    flex: 1;
-    align-self: center;
-    padding: 0 0;
-    margin-top: 2.5vh;
-    width: clamp(300px, 60vw, 1000px);
-    
-    display: grid;
-    grid-template-columns: auto;
-    grid-auto-rows: auto;
+#contact-container {
+  flex: 1;
+  align-self: center;
+  padding: 0 0;
+  margin-top: 2.5vh;
+  width: clamp(300px, 60vw, 1000px);
 
-    text-align: center;
+  display: grid;
+  grid-template-columns: auto;
+  grid-auto-rows: auto;
+
+  text-align: center;
 }
 
-
-.contact-section{
-    display: flex;
-    padding: 0.5rem;
+.contact-section {
+  display: flex;
+  padding: 0.5rem;
 }
 
-.box{
-    flex: 1;
-    min-width: 50%;
-    height: 100%;
-    padding-block: 2rem;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.box {
+  flex: 1;
+  min-width: 50%;
+  height: 100%;
+  padding-block: 2rem;
 
-    background-color: $section-bg-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  background-color: $section-bg-color;
 }
 
-#contact-info-box{
-    color: $address-font-color;
-    background-color: $section-bg-color;
-
+#contact-info-box {
+  color: $address-font-color;
+  background-color: $section-bg-color;
 }
 
-.contact-info{
+.contact-info {
+  font-size: $standard;
+}
+
+.contact-heading {
+  font-size: $heading;
+  color: $blue-color;
+}
+
+.contact-heading:not(:first-child) {
+  margin-top: 1rem;
+}
+
+#map-box {
+  width: clamp(200px, 80%, 450px);
+  min-height: 300px;
+  margin: auto;
+
+  background-color: $section-bg-color;
+}
+
+#map {
+  width: 90%;
+  height: 90%;
+  margin: auto;
+
+  border: 2px solid $blue-color;
+  border-radius: 10px;
+}
+
+#message-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .msg {
     font-size: $standard;
+    color: $msg-font-color;
+    margin-bottom: 1.5rem;
+
+    width: clamp(100px, 80%, 800px);
+  }
+
+  .msg-bold {
+    font-size: $highlight;
+    font-weight: 700;
+    color: $msg-bold-color;
+  }
 }
 
-.contact-heading{
-    font-size: $heading;
-    color:  $blue-color;
+#social-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .social-text {
+    font-size: $social-heading;
+    color: $gold-color;
+  }
+
+  .social-name {
+    font-size: calc($social-heading * 1.2);
+    font-weight: 700;
+  }
+
+  svg {
+    max-width: 50px;
+    margin-block: 2rem;
+  }
 }
 
-.contact-heading:not(:first-child){
-    margin-top: 1rem;
-}
+@media only screen and (max-width: 950px) {
+  #contact-container {
+    min-width: 95vw;
+  }
 
-#map-box{
-    width: clamp(200px, 80%, 450px);
-    min-height: 300px;
-    margin: auto;
-
-    background-color: $section-bg-color;
-}
-
-#map{
-    width: 90%;
-    height: 90%;
-    margin: auto;
-
-    border: 2px solid $blue-color;
-    border-radius: 10px;
-}
-
-#message-box{
-    display: flex;
+  .contact-section {
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    min-width: 95vw;
+  }
 
-    .msg{
-        font-size: $standard;
-        color: $msg-font-color;
-        margin-bottom: 1.5rem;
+  .box {
+    min-width: 100%;
+    height: 50%;
+  }
 
-        width: clamp(100px, 80%, 800px);
-    }
-
-    .msg-bold{
-        font-size: $highlight;
-        font-weight: 700;
-        color: $msg-bold-color;
-    }
-}
-
-#social-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    .social-text{
-        font-size: $social-heading;
-        color: $gold-color;
-    }
-
-    .social-name{
-        font-size: calc($social-heading * 1.2);
-        font-weight: 700;
-    }
-
-    svg{
-        max-width: 50px;
-        margin-block: 2rem;
-    }
-
-}
-
-@media only screen and (max-width: 900px){
-   
-    #contact-container{
-        min-width: 95vw;
-    }
-
-    .contact-section{
-        flex-direction: column;
-        min-width: 95vw;
-   }
-
-    .box{
-        min-width: 100%;
-        height: 50%;
-    }
-
-    .box:not(:first-child){
-        border-top: 1px solid $gold-color;
-        border-top-style: hidden;
-    }
-
-
+  .box:not(:first-child) {
+    border-top: 1px solid $gold-color;
+    border-top-style: hidden;
+  }
 }
